# syntheticQuestions

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  synthetic_questions.py  test_openai_integration.py
