[project]
name = "syntheicquestions"
version = "0.1.0"
description = ""
authors = [
    {name = "justin",email = "justinjagoss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain>=0.1.0,<1.0.0",
    "langchain-community>=0.0.10,<1.0.0",
    "langchain-google-genai>=1.0.0,<3.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
